--- a/simulations_MMPD6.Rmd
+++ b/simulations_MMPD6.Rmd
@@ -158,7 +158,7 @@ harmonies <- tibble::tibble(facet_variable = c("A", "B"),
 harmonies %>% knitr::kable()
 ```
 
-The output table has the value of MMPD (normalized median maximum pairwise distances), max_pd (un-normalized maximum pairwise distances), r(Rank of max_pd), gt_MMPD(global threshold of MMPD indicator) and gt_maxpd(global threshold of max_pd indicator).
+The output table has the value of MMPD (normalized median maximum pairwise distances), gt_MMPD(global threshold of MMPD indicator).
 
 ## Scenario 1: Simulated same normal distributions for all combinations of categories for all harmony pairs.
 
@@ -198,12 +198,10 @@ Failure to reject the null hypothesis when there is in fact no significant effec
 
 ```
 
-# Levels and Power of the test statistic
-
-
 
 *Conclusion*: With 3 levels the test incorrectly chooses 1 harmony pair with similar distribution. The harmony pair which is displayed.
 
+# Levels and Power of the test statistic
 
 <!-- ```{r diffnull_3levels} -->
 
@@ -211,55 +209,39 @@ Failure to reject the null hypothesis when there is in fact no significant effec
 
 *Conclusion*: The test with MMPD selects just one pair, as opposed to the test with maximum. This needs to be checked against what we expect from the test. The harmony pairs which are selected (either through MMPD or maximum) are displayed.
 
-
-# histograms of MMPD when levels are different
-When all distributions of response variables are generated from normal, how do the histogram looks 
-
-
-
-
-
 # Permutation test
 
-To estimate the sampling distribution of the test statistic we
-need many samples generated under the null hypothesis.
-If the null hypothesis is true, changing the exposure would have
-no effect on the outcome. By randomly shuffling the exposures
-we can make up as many data sets as we like.
-If the null hypothesis is true the shuffled data sets should look
-like the real data, otherwise they should look different from the
-real data.
-The ranking of the real test statistic among the shuffled test
-statistics gives a p-value.
+To estimate the sampling distribution of the test statistic we need many samples generated under the null hypothesis. If the null hypothesis is true, changing the exposure would have no effect on the outcome. By randomly shuffling the exposures we can make up as many data sets as we like. If the null hypothesis is true the shuffled data sets should look like the real data, otherwise they should look different from the
+real data. The ranking of the real test statistic among the shuffled test statistics gives a p-value.
 
-```{r}
-harmonies <- tibble::tibble(facet_variable = c("A", "B"),x_variable  = c("B","A"), facet_levels = c(2, 3),x_levels = c(3, 2))
-
-har1 <- harmonies[1,]
-
-sim_dist1 = c(rep(distributional::dist_normal(mu = 10, sigma = 5),2),rep(distributional::dist_exponential(10),2), rep(distributional::dist_weibull(0.5, 2),2))
-
-data1 <- sim_distharmony1(har1, sim_dist = sim_dist1)
-data1
-
-data1 %>% unnest(sim_dist) %>%
-  ggplot(aes(x = Var2, y = sim_dist)) +
-  facet_wrap(~Var1) + geom_boxplot() + ggtitle("Same distribution 2 by 3")
-
-response = "sim_dist"
-
-MMPD_distribution <- data1 %>%
-  select(-dist) %>% 
-  unnest(sim_dist) %>% 
-  list() %>% 
-  global_threshold(harmony_tbl = har1,
-                   response = "sim_dist",
-                   dist_distribution = "normal",
-                   dist_ordered = TRUE,
-                   create_gran_data = FALSE, nsamp = 20)
-
-# as_tibble(sample_MMPD) %>% mutate(id = row_number()) %>% 
-#   ggplot() + geom_histogram(aes(x = value))
-
-```
-
+<!-- # ```{r} -->
+<!-- # harmonies <- tibble::tibble(facet_variable = c("A", "B"),x_variable  = c("B","A"), facet_levels = c(2, 3),x_levels = c(3, 2)) -->
+<!-- #  -->
+<!-- # har1 <- harmonies[1,] -->
+<!-- #  -->
+<!-- # sim_dist1 = c(rep(distributional::dist_normal(mu = 10, sigma = 5),2),rep(distributional::dist_exponential(10),2), rep(distributional::dist_weibull(0.5, 2),2)) -->
+<!-- #  -->
+<!-- # data1 <- sim_distharmony1(har1, sim_dist = sim_dist1) -->
+<!-- # data1 -->
+<!-- #  -->
+<!-- # data1 %>% unnest(sim_dist) %>% -->
+<!-- #   ggplot(aes(x = Var2, y = sim_dist)) + -->
+<!-- #   facet_wrap(~Var1) + geom_boxplot() + ggtitle("Same distribution 2 by 3") -->
+<!-- #  -->
+<!-- # response = "sim_dist" -->
+<!-- #  -->
+<!-- # MMPD_distribution <- data1 %>% -->
+<!-- #   select(-dist) %>%  -->
+<!-- #   unnest(sim_dist) %>%  -->
+<!-- #   list() %>%  -->
+<!-- #   global_threshold(harmony_tbl = har1, -->
+<!-- #                    response = "sim_dist", -->
+<!-- #                    dist_distribution = "normal", -->
+<!-- #                    dist_ordered = TRUE, -->
+<!-- #                    create_gran_data = FALSE, nsamp = 20) -->
+<!-- #  -->
+<!-- # # as_tibble(sample_MMPD) %>% mutate(id = row_number()) %>%  -->
+<!-- # #   ggplot() + geom_histogram(aes(x = value)) -->
+<!-- #  -->
+<!-- # ``` -->
+<!-- #  -->
