--- a/null_distribution.Rmd
+++ b/null_distribution.Rmd
@@ -39,12 +39,12 @@ read_chunk('check.R')
 ```
 
 If we suppose that MMPD is useful to normalise for the number of levels, then distribution of MMPD should be same for different levels, provided the response variable for all the levels comes from the same distribution. Following scenarios are considered to test that by breaking down the problem and checking  - 
-a) Does normalising works for different x-axis levels?
-b) if yes, then does further normalisation using median works for different facet categories?
+A) Does normalising works for different x-axis levels?
+B) if yes, then does further normalisation using median works for different facet categories?
 
-## To test if normalisation works for different x-axis levels:
+## A) To test if normalisation works for different x-axis levels:
 
-For x-axis, first maximum of pairwise JS distances are computed and it is normalised using Fisher–Tippett–Gnedenko theorem. Different x-axis levels viz, 10, 20, 30, 40 are considered and data is simulated 200 times for each of these cases to learn about the distribution of these normalised distances through 
+For x-axis, first maximum of pairwise JS distances are computed and it is normalised using Fisher–Tippett–Gnedenko theorem. Different x-axis levels viz, 10, 20, 30, 40 are considered and data is simulated 200 times for each of these cases to learn about the distribution of these normalised distances by plotting their histograms.
 
 
 ### All levels drawn from N(5, 10) distribution
@@ -66,7 +66,7 @@ For x-axis, first maximum of pairwise JS distances are computed and it is normal
 ```
 
 
-From the above graphs, we could see that irrespective of the levels, the distribution of the normalised distances look like a normal distribution when the underlying observations are drawn from a N(5, 10) distribution. Let us check, if the same holds true if the underlying distributions are from Exp(0.5), Chi-squared(5), Gumbel(0.5, 2), Weibull(1.5, 1). Here, we fix the number of levels to 20.
+From the above graphs, we could see that irrespective of the levels, the distribution of the normalised distances look like a normal distribution when the underlying observations are drawn from a N(5, 10) distribution. Let us check, if the same holds true if the underlying distributions are from Exp(0.5), Chi-squared(5), Gumbel(0.5, 2). Here, we fix the number of levels to 20.
 
 
 ### Different distributions with 20 levels
@@ -83,19 +83,33 @@ From the above graphs, we could see that irrespective of the levels, the distrib
 
 ```
 
-```{r weibull20}
-
-```
-
 
 ```{r alldist}
 
 ```
 
 
-## To test if further normalisation using median works for different facet categories?
+## B) To test if further normalisation using median works for different facet categories?
+
+If the normalisation along x-axis is working, we can vary the levels across facets keeping levels of x-axis constant to see if normalisation along facets work or not. 
+
+For facets, first all normalised maximum distances are obtained and then their median is taken and futher divided by log(number of facet levels). Different facet levels viz, 10, 20, 30, 40 are considered for a fixed x-axis level and data is simulated 200 times for each of these cases to learn about the distribution of these normalised distances through a histogram.
 
 ### All levels drawn from N(5, 10) distribution
 
-### All levels drawn from Exp(2/3) distribution
+```{r normalv21}
+
+```
+
+```{r normalv22}
+
+```
+
+```{r normalv23}
+
+```
+
+```{r normalv24}
+
+```
 
