--- a/null_distribution.Rmd
+++ b/null_distribution.Rmd
@@ -28,7 +28,7 @@ opts_chunk$set(
   out.width = ifelse(is_html_output(), "100%", "\\textwidth")
 )
 knitr::opts_knit$set(root.dir = here::here())
-read_chunk('check.R')
+read_chunk('null_distribution.R')
 ```
 
 ```{r external, include = FALSE}
@@ -46,6 +46,7 @@ B) if yes, then does further normalisation using median works for different face
 
 For x-axis, first maximum of pairwise JS distances are computed and it is normalised using Fisher–Tippett–Gnedenko theorem. Different x-axis levels viz, 10, 20, 30, 40 are considered and data is simulated 200 times for each of these cases to learn about the distribution of these normalised distances by plotting their histograms.
 
+Null distribution of normalised maximum distances at this stage should be standardized Gumbel distribution. This is because we have assumed that distribution of JS distances are Normal and the maximum of such distances would follow a Gumbel distribution. When we normalise these maximum distances, ideally the distribution of those normalised distances should be standard Gumbel distribution (which is positively skewed).
 
 ### All levels drawn from N(5, 10) distribution
 
@@ -66,7 +67,7 @@ For x-axis, first maximum of pairwise JS distances are computed and it is normal
 ```
 
 
-From the above graphs, we could see that irrespective of the levels, the distribution of the normalised distances look like a normal distribution when the underlying observations are drawn from a N(5, 10) distribution. Let us check, if the same holds true if the underlying distributions are from Exp(0.5), Chi-squared(5), Gumbel(0.5, 2). Here, we fix the number of levels to 20.
+From the above graphs, we could see that irrespective of the levels, the distribution of the normalised distances look like a postively skewed distribution when the underlying observations are drawn from a N(5, 10) distribution. Let us check if the same holds true if the underlying distributions are from Exp(0.5), Chi-squared(5), Gumbel(0.5, 2). Here, we fix the number of levels to 20.
 
 
 ### Different distributions with 20 levels
@@ -93,9 +94,9 @@ From the above graphs, we could see that irrespective of the levels, the distrib
 
 If the normalisation along x-axis is working, we can vary the levels across facets keeping levels of x-axis constant to see if normalisation along facets work or not. 
 
-For facets, first all normalised maximum distances are obtained and then their median is taken and futher divided by log(number of facet levels). Different facet levels viz, 10, 20, 30, 40 are considered for a fixed x-axis level and data is simulated 200 times for each of these cases to learn about the distribution of these normalised distances through a histogram.
+For facets, first all normalised maximum distances are obtained and then their median is taken and futher divided by log(number of facet levels). Different facet levels viz, 10, 20, 30, 40 are considered for a fixed x-axis level and data is simulated 200 times for each of these cases to learn about the distributions. 
 
-### All levels drawn from N(5, 10) distribution
+### All levels drawn from Exp(2/3) distribution
 
 ```{r normalv21}
 
@@ -113,3 +114,8 @@ For facets, first all normalised maximum distances are obtained and then their m
 
 ```
 
+```{r normalallvar2}
+
+```
+
+It looks like the normalisation is also working at this stage.
