title and subtitles changed

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1199,8 +1199,35 @@ Granularities},
    pages     = "79--86",
    year      =  1951
  }
- 
- 
+
+
+@ARTICLE{Lin1991-fj,
+  title    = "Divergence measures based on the Shannon entropy",
+  author   = "Lin, J",
+  abstract = "A novel class of information-theoretic divergence measures based
+              on the Shannon entropy is introduced. Unlike the well-known
+              Kullback divergences, the new measures do not require the
+              condition of absolute continuity to be satisfied by the
+              probability distributions involved. More importantly, their close
+              relationship with the variational distance and the probability of
+              misclassification error are established in terms of bounds. These
+              bounds are crucial in many applications of divergence measures.
+              The measures are also well characterized by the properties of
+              nonnegativity, finiteness, semiboundedness, and boundedness.",
+  journal  = "IEEE Trans. Inf. Theory",
+  volume   =  37,
+  number   =  1,
+  pages    = "145--151",
+  month    =  jan,
+  year     =  1991,
+  keywords = "entropy;information theory;information theory;Shannon
+              entropy;divergence measures;variational distance;probability of
+              misclassification
+              error;nonnegativity;finiteness;semiboundedness;boundedness;Entropy;Probability
+              distribution;Upper bound;Pattern analysis;Signal analysis;Signal
+              processing;Pattern recognition;Taxonomy;Genetics;Computer science"
+}
+
 #### 
 
 
